fix swagger jwt + user route
